not yet working but a lot of progoress